static/style.css
/*
 * general
 */
 body {
  font-family: Arial, sans-serif;
  background: #f5f5f5;
}

* {
  border-radius: 10px;
  margin:0px;
}

#header-section, #footer-section, #order-section, #filter-section, .product-tile {
  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
}

/*
 * header and footer
 */
#header-section, #footer-section {
  text-align: center;
  background: #1db3f8;
  color: white;
  padding: 20px;
  margin: 20px;
}

/*
 * order-info
 */
#order-section {
  background: white;
  color: #1db3f8;
  padding: 20px;
  margin: 20px;
}

#order-section p {
  margin-top: 10px;
}

/*
 * main layout containing filter and products
 */
#main-layout {
  display: flex;
  /* grid-template-columns: 250px 1fr; *//* filters get 250 pixels, products the remaining space */
  gap: 20px;
  margin: 20px;
}

#filter-section {
  width: 250px;        /* Fixed width */
  flex-shrink: 0;      /* Prevent shrinking */
  background: white;
  padding: 20px;
}

#product-grid {
  width: 100%;         /* Take all remaining space on the right side of filter*/
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  gap: 20px;
}

.product-tile {
  background: white;
  padding: 20px;
}

/*
 * filter
 */
#filter-section button {
  font-size: 1em;
  padding: 10px;
}

#filter-section h3 {
  margin-top: 10px;
  margin-bottom: 0px;
}

/*
 * product
 */
.product-tile h2 {
  margin-bottom: 5px;
}

.product-tile img {
  width: 100%;
  aspect-ratio: 1;
  object-fit: contain;
  border: 2px solid #f5f5f5;
}

.product-tile p {
  margin-top: 5px;
}

.product-tile ul {
  padding-left: 20px;
}

.product-tile li {
  padding-left: 10px;
}

